Feature - Updates profiles.yml and dbt-ci-cd.yml

--- a/.github/profiles-dir/profiles.yml
+++ b/.github/profiles-dir/profiles.yml
@@ -4,8 +4,8 @@ my_project:
     ci:
       type: postgres
       host: $HOST
-      user: $USER
-      password: $PASSWORD
-      port: $PORT
-      dbname: $DATABASE
+      user: $DB_USER
+      password: $DB_PASSWORD
+      port: 5432
+      dbname: postgres
       schema: public
