--- a/.github/workflows/dbt-ci-cd.yml
+++ b/.github/workflows/dbt-ci-cd.yml
@@ -16,6 +16,7 @@ jobs:
       postgres:
         image: postgres:latest
         env:
+          POSTGRES_HOST: ${{ secrets.DB_HOST }}
           POSTGRES_DB: ${{ secrets.DB_NAME }}
           POSTGRES_USER: ${{ secrets.DB_USER }}
           POSTGRES_PASSWORD: ${{ secrets.DB_PASSWORD }}
