Feature - Updated profiles.yml

--- a/.github/profiles-dir/profiles.yml
+++ b/.github/profiles-dir/profiles.yml
@@ -1,11 +1,12 @@
 WorldBank:
-  target: ci
   outputs:
     ci:
-      type: postgres
-      host: $HOST
-      user: $DB_USER
-      password: $DB_PASSWORD
-      port: 5432
       dbname: postgres
+      host: $DB_HOST
+      pass: $DB_PASSWORD
+      port: 5432
       schema: public
+      threads: 2
+      type: postgres
+      user: $DB_USER
+  target: ci
