--- a/.github/workflows/dbt-ci-cd.yml
+++ b/.github/workflows/dbt-ci-cd.yml
@@ -37,6 +37,13 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
+      - name: Debug environment variables
+        run: |
+          echo "POSTGRES_HOST: $POSTGRES_HOST"
+          echo "POSTGRES_DB: $POSTGRES_DB"
+          echo "POSTGRES_HOST: $POSTGRES_HOST"
+          
+
       - name: Set up dbt environment
         run: |
           mkdir -p ~/.dbt
