Feature - Updated dbt-ci-cd.yml n profiles.yml

--- a/.github/workflows/dbt-ci-cd.yml
+++ b/.github/workflows/dbt-ci-cd.yml
@@ -17,8 +17,8 @@ jobs:
         image: postgres:latest
         env:
           POSTGRES_HOST: ${{ secrets.DB_HOST }}
-          POSTGRES_DB: ${{ secrets.DB_NAME }}
-          POSTGRES_USER: ${{ secrets.DB_USER }}
+          POSTGRES_DB: "postgres"
+          POSTGRES_USER: "postgres"
           POSTGRES_PASSWORD: ${{ secrets.DB_PASSWORD }}
         ports:
           - 5432:5432
