Feature - Updated profiles.yml

--- a/.github/workflows/dbt-ci-cd.yml
+++ b/.github/workflows/dbt-ci-cd.yml
@@ -14,7 +14,7 @@ jobs:
 
     services:
       postgres:
-        image: postgres:latest
+        image: postgres:15.2
         env:
           POSTGRES_HOST: 172.17.0.1
           POSTGRES_DB: "postgres"
@@ -36,21 +36,7 @@ jobs:
 
       - name: Install dependencies
         run: pip install -r requirements.txt
-
-      - name: Debug environment variables
-        run: |
-          echo "POSTGRES_HOST: $POSTGRES_HOST"
-          echo "POSTGRES_DB: $POSTGRES_DB"
-          echo "POSTGRES_HOST: $POSTGRES_HOST"
           
 
-      - name: Set up dbt environment
-        run: |
-          mkdir -p ~/.dbt
-          echo "profiles.yml" > ~/.dbt/profiles.yml
-
-      - name: Run dbt run
-        run: dbt run --profiles-dir . --target ci
-
-      - name: Run dbt test
-        run: dbt test --profiles-dir . --target ci
+      - name: Run dbt build
+        run: dbt build --profiles-dir . --target ci
