--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -25,7 +25,7 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   WorldBank:
     staging:
-      +materialized: view
+      +materialized: table
     dwh:
       +materialized: table
 
